# askmukthiguru-8119b0e8

./: .clauderules  .dockerignore  .env.example  .env.mobile  .env.production  .gitignore  .mcp.json  .opencode.json  .pre-commit-config.yaml  .railwayignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_AUDIT_CORRECTED.md  AUDIT_REPORT.md  AUTH_FIX_PLAN.md  BACKEND_INTEGRATION.md  CLAUDE.md  CREDENTIALS_GUIDE.md  DEPLOYMENT_SUMMARY.txt  DESIGN.md  Dockerfile  GEMINI.md  GOAL.md  HARDCODING_AUDIT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  KIMI_INTEGRATION_PLAN.md  MODEL_COMPARISON.md  Makefile  Modelfile  OAUTH_FIX_APPLIED.md  PENDING_ITEMS.md  PLAN.md  PLAN_PROGRESS.md  PRD.md  PROD_READINESS.md  PROD_READINESS_FINAL.md  PROGRESS.md  (+80 more)
backend/: .dockerignore  .env.example  .env.optimized  .env.prod  .env.test  CLAUDE.md  Dockerfile  Dockerfile.railway  GRAPH_LATENCY_PLAN.md  README.md  SEMANTIC_ROUTER_PLAN.md  __init__.py  celery_config.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  gptcache_config.yml  inspect_schema.py  logs.txt  master_schema.sql  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  scratch_list_models.py  scratch_list_poisoned_nodes.py  scratch_print_failures.py  scratch_print_full.py  scratch_run_mini_benchmark.py  scratch_test_admin_ask_http.py  scratch_test_sarvam.py  scratch_test_sarvam_effort.py  scratch_test_sarvam_long.py  scratch_test_sarvam_m.py  scratch_test_sarvam_reasoning.py  scratch_test_supabase_telemetry.py  start_railway.py  test_chat.py  test_chunk_extraction.py  test_cookie_helper.py  (+4 more)
backend/app/: builder.py  chat_engine.py  coalescer.py  config.py  constants.py  container.py  context.py  debug_helper.py  debug_retrieval.py  dependencies.py  gradio_ui.py  health.py  language_utils.py  lifecycle.py  main.py  metrics.py  observability.py  okf_compile.py  orchestrator.py  orchestrator_utils.py  qa_wiring_check.py  sanitization.py  schemas.py  security_utils.py  stream_orchestrator.py  telemetry_db.py  telemetry_sink.py  test_retrieval.py  test_sarvam.py  token_optimization.py  trace_dashboard.py  tracing.py
backend/benchmarks/: README.md  RUN_ME.sh  __init__.py  chunk_size_evaluation.py  comprehensive_benchmark.py  focused_fix_test.py  generate_dashboard.py  golden_eval.py  lightrag_answer_comparison.py  lightrag_vs_qdrant_benchmark.py  native_eval.py  question_bank.py  ragas_eval.py  run_all.py  run_benchmarks.sh  run_ralph.py  ruthless_benchmark.py  sdlc_rag_benchmark.py  smoke_doctrine.py  test_memory_profile.py  validate_graph.py  verify_custom_assistants.py
backend/colab/: README.md  __init__.py  mukthiguru_colab.ipynb  setup.py  transfer.py  visual_guru.ipynb
backend/config/: lmcache_config.yaml  router_routes.yaml
backend/data/: feedback.jsonl  ingest_checkpoint.json
backend/domain/: ONTOLOGY_CHANGELOG.md  dprod_descriptor.yaml  ontology_shapes.ttl  retrieval_types.py  spiritual_ontology.py  upper_ontology_mapping.py
backend/dotenv/: __init__.py
backend/evaluation/: eval_runner.py  golden_dataset.json  llm_judge.py  ragas_eval.py  run_golden_eval.py
backend/guardrails/: __init__.py  base.py  chain.py  disabled_handler.py  lightweight_handler.py  llama_guard_handler.py  nemo_handler.py  rails.py  rejection_handler.py
backend/infrastructure/: k8s.yaml  scheduler.py
backend/ingest/: adaptive_chunking.py  audio_transcriber.py  auditor.py  boundary_chunker.py  cleaner.py  contextual_reingest.py  corrector.py  deduplication.py  hyper_extract_adapter.py  image_loader.py  ontology_writer.py  pdf_parser.py  pipeline.py  quality_gate.py  raptor.py  social_media_loader.py  triple_extractor.py  video_pipeline.py  web_scraper.py  youtube_loader.py
backend/ingestion/: web_ingest_pipeline.py
backend/memory/: semantic-patterns.json
backend/models/: Modelfile.sarvam30b  download_models.ps1  download_models.sh  feedback.py  setup_sarvam.ps1  setup_sarvam.sh  user.py
backend/optimization/: __init__.py
backend/rag/: agentic_nodes.py  compression.py  compressor.py  cot_verifier.py  doc_utils.py  dspy_engine.py  graph.py  graph_builder.py  graph_strategies.py  intent_prerouter.py  kg_expansion.py  meditation.py  memory.py  node_command.py  node_llm_config.py  node_registry.py  nodes.py  prompts.py  query_patterns.py  resolve_followup.py  self_correction.py  states.py  telemetry_observer.py  timeout_utils.py  tools.py  tree_navigator.py
backend/routers/: admin.py  compliance.py  feedback.py  notebooks.py
backend/schemas/: feedback.py  push.py  user.py
backend/scripts/: cache_warmer.py  download_models.py  download_reranker.py  dream_memories.py  extract_okf_from_stores.py  fix_py39_types.py  ingest_pdf_pipeline.py  init_db.py  init_neosemantics.py  migrate_data.py  migrate_prompt_store.py  phase05_audit.py  precompute_retrieval.py  seed_admin.py  seed_guru_tone_qdrant.py  seed_neo4j_okf.cypher  seed_neo4j_okf.py  seed_okf.py  seed_personal_kg.py  verify_multilingual.py  verify_sarvam.py  warm_cache.py  warm_doctrine_cache.py  warm_semantic_cache.py
backend/services/: ab_testing.py  adaptive_chunking_adapter.py  adaptive_chunking_service.py  auth_service.py  base_llm_service.py  cache_service.py  circuit_breaker.py  citation_service.py  compliance_logger.py  concurrent_retriever.py  confidence_scorer.py  config_watcher.py  container_builder.py  context_compressor.py  contextual_chunking_service.py  cookie_helper.py  cost_tracker.py  crisis_helplines.py  depression_detector.py  doctrine_cache.py  doctrine_service.py  doctrine_terms.py  embedding_service.py  feedback_service.py  graphrag_fusion.py  health_monitor.py  hot_cache.py  http_client_pool.py  humanizer.py  ingestion_tracker.py  injection_scanner.py  kg_algorithms.py  krutrim_service.py  language_router.py  lettuce_detect_service.py  lightrag_service.py  llm_factory.py  llm_gateway.py  llm_protocol.py  memory_service.py  (+46 more)
backend/tasks/: cancel_flow_tasks.py  contextual_reingest_task.py  ingest_tasks.py  okf_compile_tasks.py  okf_extract_tasks.py  web_ingest_tasks.py
(+1814 files in other folders)
