[project]
name = "askmukthiguru-backend"
version = "0.1.0"
description = "FastAPI backend for AskMukthiGuru AI Spiritual Guide"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Private" }

dependencies = [
    # Core
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.14.2,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "supabase>=2.3.0",
    "instructor>=1.0.0",

    # LLM & RAG
    "langchain>=1.3.13,<2.0",
    "langchain-core>=1.4.9,<2.0",
    "langchain-community>=0.3.15,<1.0",
    "langchain-ollama>=0.3.0,<1.0",
    "langgraph>=1.2.9,<2.0",
    "langchain-nvidia-ai-endpoints>=1.4.0",
    "langchain-sarvam>=0.1.0",
    "sarvamai>=0.1.0",
    "qdrant-client>=1.13.0,<2.0",
    "sentence-transformers>=3.0.1,<3.4.0",
    "FlagEmbedding>=1.2.10",
    "umap-learn>=0.5.7",
    "scikit-learn>=1.6.0,<2.0",
    "lightrag-hku>=1.0.0",
    "llmlingua>=0.2.2,<0.3.0",
    "neo4j>=5.17.0",

    # Ingestion & Media
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2025.10.14",  # LICENSE-EXCEPTION: Un licensed nightly not approved; use latest public-domain release
    "requests>=2.32.0,<3.0",
    "Pillow>=12.2.0,<13.0",
    "duckduckgo-search>=6.1.7",

    # Infrastructure
    "cachetools>=5.3.0,<6.0",
    "prometheus_client>=0.21.0",
    "redis>=5.2.0",
    "apscheduler>=3.10.0",

    # Auth & Security
    "fastapi-users[sqlalchemy]>=13.0.0",
    "slowapi>=0.1.9",
    "aiosqlite>=0.20.0",
    "passlib[bcrypt]>=1.7.4",
    "gptcache>=0.1.43",
    "easyocr>=1.7.2",
    "nemoguardrails>=0.11.0",

    # UI
    "gradio>=6.15.0",

    # Observability & Tracing
    "opentelemetry-sdk>=1.24.0,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0,<1.0",
    "opentelemetry-exporter-otlp>=1.24.0,<2.0",
    "openinference-instrumentation-langchain>=0.1.33,<1.0",

    # Advanced Ingestion
    "litellm>=1.24.0",
    "pypdf>=6.13.3,<7.0",
    "PyYAML>=6.0.0",
    "turbovec>=0.8.0"
]

[project.optional-dependencies]
heavy = [
    "faster-whisper>=1.1.0",
    "arize-phoenix>=4.38.0",
    "openinference-instrumentation-langchain>=0.1.33",
    "ragas>=0.2.1",
]
eval = [
    "dspy-ai>=2.4.0",
    "ragas>=0.2.1",
    "arize-phoenix>=4.38.0",
    "openinference-instrumentation-langchain>=0.1.33",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "httpx>=0.28.0,<1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    # Property-based testing — generates 100s of test cases automatically
    "hypothesis>=6.100.0,<7.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"  # Matches .venv Python 3.12 — enables TaskGroup, except*, slots=True
exclude = [
    "*.ipynb",
    "colab/**",
    "repos/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # Line length handled by formatter
    "E402",  # Module level import not at top of file (needed for path-patching scripts)
    "UP042", # Class inherits from both str and Enum (needed for backwards-compatible string enums)
    "B905",  # zip() strict= parameter (breaks compatibility with Python < 3.10)
    "B008",  # Depends function calls in FastAPI defaults
    "B904",  # exception chaining (raise from)
    "UP047", # PEP 695 generics (def func[T]...) break compatibility with Python < 3.12
    "UP045", # Prefer X | None over Optional[X] (Optional is required for Python 3.9 compatibility without future imports)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "repos",
    ".git",
    ".venv",
    "__pycache__",
]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore:.*allowed_objects.*",
    "ignore:.*LangChainPendingDeprecationWarning.*",
    "ignore:::langgraph.*",
    "ignore:::langchain_core.*",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app", "rag", "domain", "services", "routers"]
